--- a/src/app/modules/globaladmin/customerplans/customerplans.component.scss
+++ b/src/app/modules/globaladmin/customerplans/customerplans.component.scss
@@ -1,9 +1,17 @@
 .mat-form-field{
     margin-right: 15px;
+    width:98%;
 }
-.mat-column-LoginUserCount,.mat-column-PersonOrItemCount,.mat-column-Active,.mat-column-MinCount,.mat-column-MinPrice,.mat-column-PCPM,.mat-column-CurrencyId{
-    width: 5% !important;  
+.mat-column-LoginUserCount,
+.mat-column-PersonOrItemCount,
+.mat-column-Active,
+.mat-column-MinCount,
+.mat-column-MinPrice,
+.mat-column-PCPM,
+.mat-column-AmountPerMonth
+{
+    flex:0 0 100px;
 }
 .mat-column-Formula{
-    flex: 1 1 15%;
+    flex: 0 0 200px;
 }
