--- a/src/app/modules/control/add-master-data/add-master-data.component.html
+++ b/src/app/modules/control/add-master-data/add-master-data.component.html
@@ -1,163 +1,170 @@
-<div fxLayout="column" fxLayoutAlign="center space-between">
-    <div style="padding: 15px;font-weight: bold;">Essential Data</div>
-    <div>
-        <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
-        <alert></alert>
-        <br>
-        <form [formGroup]="searchForm">
-            <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="30px">
-                <!-- <mat-form-field fxFlex appearance="outline" [hidden]="SelectedApplicationName!='globaladmin'">
-                    <mat-label>Application</mat-label>
-                    <mat-select formControlName="AppId" fxFlex (selectionChange)="FilterMaster($event)">
-                        <mat-option *ngFor="let app of PermittedApplications" [value]="app.applicationId">
-                            {{app.applicationName}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field> -->
-                <mat-form-field fxFlex appearance="outline">
-                    <mat-label>Master</mat-label>
-                    <mat-select #ParentId formControlName="ParentId" fxFlex (selectionChange)="GetSubMasters($event)">
-                        <mat-option *ngFor="let master of TopMasters" [value]="master.MasterDataId">
-                            {{master.MasterDataName}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <mat-form-field fxFlex appearance="outline">
-                    <mat-label>Sub Master</mat-label>
-                    <mat-select #ParentId formControlName="SubId" fxFlex>
-                        <mat-option [value]="0">--sub master--</mat-option>
-                        <mat-option *ngFor="let master of SubMasters" [value]="master.MasterDataId">
-                            {{master.MasterDataName}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <!-- <mat-form-field fxFlex appearance="outline" [hidden]="SelectedApplicationName!='globaladmin'">
-                    <mat-label>Organization</mat-label>
-                    <mat-select formControlName="OrgId" fxFlex>
-                        <mat-option *ngFor="let master of Organizations" [value]="master.OrganizationId">
-                            {{master.OrganizationName}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field> -->
-                <button [disabled]="loading" matTooltip="search" class="mat-raised-button" (click)="GetSearchMaster()"
-                    fxFlex="10">
-                    <mat-icon>search</mat-icon>
-                </button>
-                <div fxFlex>&nbsp;</div>
-            </div>
-        </form>
-        <div style="overflow: auto;">
-            <mat-divider></mat-divider>
-            <mat-table [dataSource]="datasource" matSort>
-                <ng-container matColumnDef="MasterDataId">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Id</mat-header-cell>
-                    <mat-cell *matCellDef="let element" [style.width.px]="25">
-                        {{element.MasterDataId}}
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="MasterDataName">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-form-field [style.width.px]="250">
-                            <input [disabled]="Parent=='Information Restriction' 
+<div style="padding: 15px;font-weight: bold;">Essential Data</div>
+<mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
+<alert></alert>
+<br>
+<form [formGroup]="searchForm">
+    <!-- <mat-form-field appearance="outline" [style.width.px]="200">
+        <mat-label>Master</mat-label>
+        <mat-select #ParentId formControlName="ParentId" (selectionChange)="GetSubMasters($event)">
+            <mat-option *ngFor="let master of TopMasters" [value]="master.MasterDataId">
+                {{master.MasterDataName}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field> -->
+    <mat-form-field appearance="outline" [style.width.px]="350">
+        <mat-label>Master</mat-label>
+        <input type="text" matInput formControlName="ParentId"         
+        [matAutocomplete]="auto">
+        <mat-autocomplete #auto="matAutocomplete" 
+        (optionSelected) ="GetSubMasters($event.option.value)"
+        [displayWith]="displayFn">
+            <mat-option *ngFor="let option of filteredMaster | async" [value]="option">
+                {{option.MasterDataName}}
+            </mat-option>
+        </mat-autocomplete>
+    </mat-form-field>
+    <mat-form-field appearance="outline" [style.width.px]="200">
+        <mat-label>Sub Master</mat-label>
+        <mat-select #ParentId formControlName="SubId">
+            <mat-option [value]="0">--sub master--</mat-option>
+            <mat-option *ngFor="let master of SubMasters" [value]="master.MasterDataId">
+                {{master.MasterDataName}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+    <button [style.width.px]="80" [disabled]="loading" matTooltip="search" class="mat-raised-button"
+        (click)="GetSearchMaster()">
+        <mat-icon>search</mat-icon>
+    </button>
+</form>
+<div style="overflow: auto;">
+    <mat-divider></mat-divider>
+    <mat-table [dataSource]="datasource" matSort>
+        <ng-container matColumnDef="MasterDataId">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Id</mat-header-cell>
+            <mat-cell *matCellDef="let element">
+                {{element.MasterDataId}}
+            </mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="MasterDataName">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+            <mat-cell *matCellDef="let element">
+                <mat-form-field appearance="outline">
+                    <input [disabled]="Parent=='Information Restriction' 
                                             || Parent=='Period Type'
                                             || Parent=='Roll No Generation' 
                                             || Parent=='Class Promotion'
-                                            || element.MasterDataName=='Cash'" 
-                            matInput 
-                            [value]="element.MasterDataName" [(ngModel)]="element.MasterDataName"
-                                autocomplete="Off" placeholder="" (blur)="onBlur(element)" [minlength]="1"
-                                [maxlength]="50">
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="Logic">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Logic</mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-form-field [style.width.px]="250">
-                            <textarea matInput [value]="element.Logic" [(ngModel)]="element.Logic" autocomplete="Off"
-                                (blur)="onBlur(element)" [maxlength]="256"></textarea>
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="Sequence">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Sequence</mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-form-field [style.width.px]="50">
-                            <input type="number" matInput [value]="element.Sequence" [(ngModel)]="element.Sequence"
-                                autocomplete="Off" (blur)="ReSequence(element)" [max]="100">
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="Description">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Description</mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-form-field [style.width.px]="250">
-                            <textarea matInput [value]="element.Description" [(ngModel)]="element.Description"
-                                autocomplete="Off" (blur)="onBlur(element)" [maxlength]="2000"></textarea>
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="Active">
-                    <mat-header-cell *matHeaderCellDef style="justify-content: center;">
-                        <button style="margin-right: 15px;" [disabled]="loading || Permission=='read' || Parent=='Information Restriction'" matTooltip="new item"
-                            *ngIf="enableAddNew" class="mat-raised-button" (click)="AddData()" fxFlex="10">
-                            <mat-icon>add</mat-icon>
-                        </button>
-                        <button [disabled]="loading || Permission=='read'" matTooltip="save all" class="mat-raised-button" (click)="SaveAll()"
-                            fxFlex="10">
-                            <mat-icon>all_out</mat-icon>
-                        </button>
-                    </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
-                            [checked]="element.Active">
-                        </mat-checkbox>&nbsp;
-                        <button [disabled]="loading || !element.Action || Permission=='read'" matTooltip="view/edit" mat-mini-fab
-                            (click)="SaveRow(element)">
-                            <mat-icon>save</mat-icon>
-                        </button>
-                    </mat-cell>
-                </ng-container>
+                                            || element.MasterDataName=='Cash'" matInput
+                        [value]="element.MasterDataName" [(ngModel)]="element.MasterDataName" autocomplete="Off"
+                        placeholder="" (blur)="onBlur(element)" [minlength]="1" [maxlength]="50">
+                </mat-form-field>
+            </mat-cell>
+        </ng-container>        
+        <ng-container matColumnDef="ParentId">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Parent</mat-header-cell>
+            <mat-cell *matCellDef="let element">
+                <mat-form-field appearance="outline">
+                    <mat-select 
+                    (selectionChange)="onBlur(element)"    
+                    [(ngModel)]="element.ParentId" [value]="element.ParentId">
+                        <mat-option [value]="0">select</mat-option>
+                        <mat-option *ngFor="let item of RowParent" [value]="item.MasterDataId">
+                            {{item.MasterDataName}}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="Logic">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Logic</mat-header-cell>
+            <mat-cell *matCellDef="let element">
+                <mat-form-field appearance="outline">
+                    <textarea matInput [value]="element.Logic" [(ngModel)]="element.Logic" autocomplete="Off"
+                        (blur)="onBlur(element)" [maxlength]="256"></textarea>
+                </mat-form-field>
+            </mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="Sequence">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Sequence</mat-header-cell>
+            <mat-cell *matCellDef="let element">
+                <mat-form-field appearance="outline">
+                    <input type="number" matInput 
+                    (blur)="onBlur(element)"
+                    [value]="element.Sequence" [(ngModel)]="element.Sequence"
+                        autocomplete="Off" (blur)="ReSequence(element)" [max]="100">
+                </mat-form-field>
+            </mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="Description">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Description</mat-header-cell>
+            <mat-cell *matCellDef="let element">
+                <mat-form-field appearance="outline">
+                    <textarea matInput [value]="element.Description" [(ngModel)]="element.Description"
+                        autocomplete="Off" (blur)="onBlur(element)" [maxlength]="2000"></textarea>
+                </mat-form-field>
+            </mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="Active">
+            <mat-header-cell *matHeaderCellDef style="justify-content: center;">
+                <button style="margin-right: 15px;"
+                    [disabled]="loading || Permission=='read' || Parent=='Information Restriction'"
+                    matTooltip="new item" *ngIf="enableAddNew" class="mat-raised-button" (click)="AddData()">
+                    <mat-icon>add</mat-icon>
+                </button>
+            </mat-header-cell>
+            <mat-cell *matCellDef="let element">
+                <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
+                    [checked]="element.Active">
+                </mat-checkbox>
+            </mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="Action">
+            <mat-header-cell *matHeaderCellDef style="justify-content: center;">
+                <button [disabled]="loading || Permission=='read'" matTooltip="save all" class="mat-raised-button"
+                    (click)="SaveAll()">
+                    <mat-icon>all_out</mat-icon>
+                </button>
+            </mat-header-cell>
+            <mat-cell *matCellDef="let element">
+                <button [disabled]="loading || !element.Action || Permission=='read'" matTooltip="view/edit"
+                    mat-mini-fab (click)="SaveRow(element)">
+                    <mat-icon>save</mat-icon>
+                </button>
+            </mat-cell>
+        </ng-container>
 
-                <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
-                <mat-row *matRowDef="let row; columns: DisplayColumns;" fxLayoutAlign="space-between center"
-                    fxLayout="row">
-                </mat-row>
-            </mat-table>
-            <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
-        </div>
-    </div>
-    <div>
-
-        <div fxLayoutGap="30px" fxLayout="row wrap" fxLayoutAlign="space-around center" class="boxes">
-            <strong>Below variable name can be added in certificate definition.</strong>
-            <div *ngFor="let item of StudentVariableNames">
-                {{item}}
-            </div>
-        </div>
-        <div fxLayout="column" fxLayoutAlign="center center" class="boxes">
-            <strong>Essential data for Application setting Statuses</strong>
-            <div
-                style="border-collapse:collapse;border-top-color: 1px solid grey;border-bottom-color: 1px solid lightgrey;">
-                <div fxLayoutGap="30px" fxLayout="row wrap" fxLayoutAlign="space-around center">
-                    <div style="width:200px" *ngFor="let item of ApplicationDataStatus">{{item.MasterDataName}}
-                        <mat-icon matTooltip="done" *ngIf="item.Done">done</mat-icon>
-                        <mat-icon matTooltip="pending" *ngIf="!item.Done">pending</mat-icon>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div fxLayout="column" fxLayoutAlign="center center" class="boxes">
-            <strong>Essential data for <b>School Application</b> setting Statuses</strong>
-            <div style="border-collapse:collapse;border-top-color: 1px solid grey;border-bottom-color: 1px solid grey;">
-                <div fxLayoutGap="30px" fxLayout="row wrap" fxLayoutAlign="space-around center">
-                    <div style="width:200px" *ngFor="let item of SchoolDataStatus">{{item.MasterDataName}}
-                        <mat-icon matTooltip="done" *ngIf="item.Done">done</mat-icon>
-                        <mat-icon matTooltip="pending" *ngIf="!item.Done">pending</mat-icon>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+        <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: DisplayColumns;">
+        </mat-row>
+    </mat-table>
+    <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
 </div>
+<div>
+    <div fxLayoutGap="30px" fxLayout="row wrap" fxLayoutAlign="space-around center" class="boxes">
+        <strong>Below variable name can be added in certificate definition.</strong>
+        <div *ngFor="let item of StudentVariableNames">
+            {{item}}
+        </div>
+    </div>
+    <div fxLayout="column" fxLayoutAlign="center center" class="boxes">
+        <strong>Essential data for Application setting Statuses</strong>
+        <div
+            style="border-collapse:collapse;border-top-color: 1px solid grey;border-bottom-color: 1px solid lightgrey;">
+            <div fxLayoutGap="30px" fxLayout="row wrap" fxLayoutAlign="space-around center">
+                <div style="width:200px" *ngFor="let item of ApplicationDataStatus">{{item.MasterDataName}}
+                    <mat-icon matTooltip="done" *ngIf="item.Done">done</mat-icon>
+                    <mat-icon matTooltip="pending" *ngIf="!item.Done">pending</mat-icon>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div fxLayout="column" fxLayoutAlign="center center" class="boxes">
+        <strong>Essential data for <b>School Application</b> setting Statuses</strong>
+        <div style="border-collapse:collapse;border-top-color: 1px solid grey;border-bottom-color: 1px solid grey;">
+            <div fxLayoutGap="30px" fxLayout="row wrap" fxLayoutAlign="space-around center">
+                <div style="width:200px" *ngFor="let item of SchoolDataStatus">{{item.MasterDataName}}
+                    <mat-icon matTooltip="done" *ngIf="item.Done">done</mat-icon>
+                    <mat-icon matTooltip="pending" *ngIf="!item.Done">pending</mat-icon>
+                </div>
+            </div>
+        </div>
+    </div>
